--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -75,7 +75,7 @@
           Iniciar Sesión
         </div>
         <div
-          (click)="showModal()"
+          (click)="handleSession()"
           *ngIf="isOnLine"
           class="login btn border text-white ms-3"
         >
