--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -14,6 +14,12 @@
   );
 }
 
+.add-button {
+  background: none;
+  border: none;
+  width: 70%;
+}
+
 .list-experience {
   background: linear-gradient(
     174deg,
@@ -162,4 +168,8 @@
   background-size: 60%;
   background-position: center center;
   background-repeat: no-repeat;
+}
+
+input:not(input[class*="form-check"]) {
+  min-width: 300px;
 }
