--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -19,8 +19,11 @@
       style="width: 60% !important"
     >
       <div *ngIf="isOnLine">
-        <button (click)="showModalEdit()" class="edit hover-opacity"></button>
-        <button class="del hover-opacity"></button>
+        <button (click)="showModal('edit')" class="edit hover-opacity"></button>
+        <button
+          (click)="showModal('delete')"
+          class="del hover-opacity"
+        ></button>
       </div>
       <div class="card-header h2">Capacitación Desarrollo full Stack</div>
       <div class="card-body">
@@ -32,64 +35,181 @@
       </div>
     </div>
 
+    <!--ITEM OF ADD ITEM-->
+    <button class="add-button" (click)="showModal('create')">
+      <div *ngIf="isOnLine" class="item-add">
+        <div
+          class="logo-add d-flex flex-column align-items-center justify-content-center"
+        >
+          <img
+            class="icon-plus"
+            src="../../assets/logos/icon-plus.svg"
+            alt="plus"
+          />
+          <p style="font-size: 0.8rem; font-weight: bold; color: #19212e">
+            Agregar Experiencia
+          </p>
+        </div>
+      </div>
+    </button>
+
     <!--DECLARACIONES DE LAS VENTANAS MODAL-->
 
+    <!--VENTANA MODAL DE EDICION-->
     <div
-      *ngIf="switchForm"
+      *ngIf="switchFormEdit"
       class="bg-modal d-flex justify-content-center align-items-center"
     >
       <div class="p-5 bg-light text-dark position-relative">
         <button (click)="closeModal()" class="close position-absolute"></button>
         <form [formGroup]="form" (submit)="handleSubmit($event)">
-          <div>
-            <label class="form-label fw-bold">Titulo:</label>
-            <input class="form-control" type="text" formControlName="nombre" />
+          <div class="row">
+            <div class="col">
+              <div>
+                <label class="form-label fw-bold">Institución:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="institucion"
+                />
+              </div>
+              <br />
+              <div>
+                <label class="form-label fw-bold">Título:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="titulo"
+                />
+              </div>
+              <br />
+            </div>
+            <div class="col">
+              <div>
+                <label class="form-label fw-bold">Fecha de Inicio:</label>
+                <input
+                  class="form-control"
+                  type="date"
+                  formControlName="fechaInicio"
+                />
+              </div>
+              <br />
+              <div>
+                <label class="form-label fw-bold">Fecha de Fin:</label>
+                <input
+                  class="form-control"
+                  type="date"
+                  formControlName="fechaFin"
+                />
+              </div>
+              <br />
+              <div class="form-check">
+                <label class="form-check-label">Presente</label>
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value="checked"
+                  formControlName="presente"
+                />
+              </div>
+              <br />
+            </div>
           </div>
-          <br />
-          <div>
-            <label class="form-label fw-bold">Institución:</label>
-            <input
-              class="form-control"
-              type="text"
-              formControlName="institucion"
-            />
-          </div>
-          <br />
-          <div>
-            <label class="form-label fw-bold">Título:</label>
-            <input class="form-control" type="text" formControlName="titulo" />
-          </div>
-          <br />
-          <div>
-            <label class="form-label fw-bold">Fecha de Inicio:</label>
-            <input
-              class="form-control"
-              type="date"
-              formControlName="fechaInicio"
-            />
-          </div>
-          <br />
-          <div>
-            <label class="form-label fw-bold">Fecha de Fin:</label>
-            <input
-              class="form-control"
-              type="date"
-              formControlName="fechaFin"
-            />
-          </div>
-          <br />
-          <div class="form-check">
-            <label class="form-check-label">Presente</label>
-            <input
-              class="form-check-input"
-              value=""
-              type="checkbox"
-              formControlName="presente"
-            />
-          </div>
-          <br />
-          <div>
+
+          <div class="text-center">
             <button class="btn btn-primary">Editar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!--VENTANA MODAL DE AGREGAR-->
+    <div
+      *ngIf="switchFormCreate"
+      class="bg-modal d-flex justify-content-center align-items-center"
+    >
+      <div class="p-5 bg-light text-dark position-relative">
+        <button (click)="closeModal()" class="close position-absolute"></button>
+        <form [formGroup]="form" (submit)="handleSubmit($event)">
+          <div class="row">
+            <div class="col">
+              <div>
+                <label class="form-label fw-bold">Institución:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="institucion"
+                />
+              </div>
+              <br />
+              <div>
+                <label class="form-label fw-bold">Título:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="titulo"
+                />
+              </div>
+              <br />
+            </div>
+            <div class="col">
+              <div>
+                <label class="form-label fw-bold">Fecha de Inicio:</label>
+                <input
+                  class="form-control"
+                  type="date"
+                  formControlName="fechaInicio"
+                />
+              </div>
+              <br />
+              <div>
+                <label class="form-label fw-bold">Fecha de Fin:</label>
+                <input
+                  class="form-control"
+                  type="date"
+                  formControlName="fechaFin"
+                />
+              </div>
+              <br />
+              <div class="form-check">
+                <label class="form-check-label">Presente</label>
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value="checked"
+                  formControlName="presente"
+                />
+              </div>
+              <br />
+            </div>
+          </div>
+
+          <div class="text-center">
+            <button class="btn btn-primary">Crear</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!--VENTANA MODAL DE ELIMINAR-->
+    <div
+      *ngIf="switchFormDelete"
+      class="bg-modal d-flex justify-content-center align-items-center"
+    >
+      <div class="p-5 bg-light text-dark position-relative">
+        <button (click)="closeModal()" class="close position-absolute"></button>
+        <form
+          [formGroup]="form"
+          class="position-relative text-center"
+          (submit)="handleSubmit($event)"
+        >
+          <img class="w-25" src="../../assets/trash-icon.gif" alt="delete" />
+          <h3 class="my-5">¿Estas seguro que deseas eliminar?</h3>
+          <div class="text-center">
+            <button class="btn btn-danger mx-2">Eliminar</button>
+            <button (click)="closeModal()" class="btn btn-primary mx-2">
+              Cancelar
+            </button>
           </div>
         </form>
       </div>
