--- a/src/app/skill/skill.component.css
+++ b/src/app/skill/skill.component.css
@@ -127,3 +127,7 @@
   background-position: center center;
   background-repeat: no-repeat;
 }
+
+input:not(input[class*="form-check"]) {
+  min-width: 300px;
+}
