--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -21,11 +21,11 @@
               >
                 <div *ngIf="isOnLine">
                   <button
-                    (click)="showModal()"
+                    (click)="showModal('edit')"
                     class="edit hover-opacity"
                   ></button>
                   <button
-                    (click)="showModal()"
+                    (click)="showModal('delete')"
                     class="del hover-opacity"
                   ></button>
                 </div>
@@ -65,7 +65,7 @@
           </div>
           <div class="col-6 col-lg-3" *ngIf="isOnLine">
             <button
-              (click)="showModal()"
+              (click)="showModal('create')"
               style="border: none; background: none; width: 100%"
             >
               <div class="p-4 mt-3">
@@ -95,12 +95,96 @@
 
 <!--DECLARACIONES DE LAS VENTANAS MODAL-->
 
+<!--VENTANA MODAL DE EDICION-->
 <div
-  *ngIf="switchForm"
+  *ngIf="switchFormEdit"
   class="bg-modal d-flex justify-content-center align-items-center"
 >
-  <div class="p-5 bg-light position-relative">
+  <div class="p-5 bg-light text-dark position-relative">
     <button (click)="closeModal()" class="close position-absolute"></button>
-    <form action="">form skill</form>
+    <form [formGroup]="form" (submit)="handleSubmit($event)">
+      <div>
+        <label class="form-label fw-bold">Nombre:</label>
+        <input class="form-control" type="text" formControlName="nombre" />
+      </div>
+      <div>
+        <label class="form-label fw-bold">Imagen (url):</label>
+        <input class="form-control" type="text" formControlName="imagen" />
+      </div>
+      <div class="my-3">
+        <select
+          class="custom-select custom-select-sm w-100 text-dark fw-bold"
+          formControlName="conocimiento"
+        >
+          <option value="" hidden selected>Nivel de conocimiento</option>
+          <option value="1">Inicial</option>
+          <option value="2">Intermedio</option>
+          <option value="3">Avanzado</option>
+        </select>
+      </div>
+
+      <div class="text-center">
+        <button class="btn btn-primary">Editar</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!--VENTANA MODAL DE CREACION-->
+<div
+  *ngIf="switchFormCreate"
+  class="bg-modal d-flex justify-content-center align-items-center"
+>
+  <div class="p-5 bg-light text-dark position-relative">
+    <button (click)="closeModal()" class="close position-absolute"></button>
+    <form [formGroup]="form" (submit)="handleSubmit($event)">
+      <div>
+        <label class="form-label fw-bold">Nombre:</label>
+        <input class="form-control" type="text" formControlName="nombre" />
+      </div>
+      <div>
+        <label class="form-label fw-bold">Imagen (url):</label>
+        <input class="form-control" type="text" formControlName="imagen" />
+      </div>
+      <div class="my-3">
+        <select
+          class="custom-select custom-select-sm w-100 text-dark fw-bold"
+          formControlName="conocimiento"
+        >
+          <option value="" hidden selected>Nivel de conocimiento</option>
+          <option value="1">Inicial</option>
+          <option value="2">Intermedio</option>
+          <option value="3">Avanzado</option>
+        </select>
+      </div>
+
+      <div class="text-center">
+        <button class="btn btn-primary">Crear</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!--VENTANA MODAL DE ELIMINACIÓN-->
+<div
+  *ngIf="switchFormDelete"
+  class="bg-modal d-flex justify-content-center align-items-center"
+>
+  <div class="p-5 bg-light text-dark position-relative">
+    <button (click)="closeModal()" class="close position-absolute"></button>
+    <form
+      [formGroup]="form"
+      class="position-relative text-center"
+      (submit)="handleSubmit($event)"
+    >
+      <img class="w-25" src="../../assets/trash-icon.gif" alt="delete" />
+      <h3 class="my-5">¿Estas seguro que deseas eliminar?</h3>
+      <div class="text-center">
+        <button class="btn btn-danger mx-2">Eliminar</button>
+        <button (click)="closeModal()" class="btn btn-primary mx-2">
+          Cancelar
+        </button>
+      </div>
+    </form>
   </div>
 </div>
