cargado dinamico recursos

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,7 +7,7 @@
       <img
         style="margin-top: -50px"
         class="rounded-circle border"
-        src="../assets/foto-perfil.jfif"
+        src="../../assets/foto-perfil.jfif"
         alt="foto perfil"
       />
       <h3 class="text-white pt-4">Sobre Mi</h3>
