--- a/src/app/skill/skill.component.css
+++ b/src/app/skill/skill.component.css
@@ -23,7 +23,8 @@
   width: 100%;
   position: relative;
 }
-.item-skill::before {
+#name-skill {
+  text-transform: uppercase;
   content: attr(skill-name);
   font-family: Verdana, sans-serif;
   font-weight: bold;
