--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -12,13 +12,13 @@
       </div>
       <div class="grid-skills px-3 py-5 rounded">
         <div class="row">
-          <div class="col-6 col-lg-3">
+          <div *ngFor="let sk of skills" class="col-6 col-lg-3">
             <div class="p-4 mt-3">
               <div
-                skill-name="JAVASCRIPT"
-                class="item-skill rounded-circle shadow bg-gradient d-flex flex-column justify-content-between align-items-center"
+                class="item-skill rounded-circle shadow bg-gradient d-flex flex-column justify-content-between align-items-center position-relative"
                 style="background-color: #19212e"
               >
+                <h4 id="name-skill">{{ sk.name }}</h4>
                 <div *ngIf="isOnLine">
                   <button
                     (click)="showModal('edit')"
@@ -29,11 +29,7 @@
                     class="del hover-opacity"
                   ></button>
                 </div>
-                <img
-                  class="logo-skill"
-                  src="https://i.imgur.com/h8oNzHS.png"
-                  alt="logo skill"
-                />
+                <img class="logo-skill" [src]="sk.photo" alt="logo skill" />
                 <div
                   class="w-75 d-flex flex-column align-items-center justify-content-center flex-grow-1"
                 >
@@ -46,18 +42,28 @@
                     ></div>
                     <div
                       class="element-2 mx-1"
-                      style="height: 70%; background-color: #88ff63"
+                      style="height: 70%"
+                      [ngStyle]="{
+                        'background-color':
+                          sk.level === 'Intermedio' || sk.level === 'Avanzado'
+                            ? '#88ff63'
+                            : '#6b8c61'
+                      }"
                     ></div>
                     <div
                       class="element-3 mx-1"
-                      style="height: 100%; background-color: #6b8c61"
+                      style="height: 100%"
+                      [ngStyle]="{
+                        'background-color':
+                          sk.level === 'Avanzado' ? '#88ff63' : '#6b8c61'
+                      }"
                     ></div>
                   </div>
                   <p
                     class="text-light"
                     style="font-size: 0.8rem; font-weight: bold"
                   >
-                    Intermedio
+                    {{ sk.level }}
                   </p>
                 </div>
               </div>
