--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -100,7 +100,7 @@
       </h2>
     </div>
   </div>
-  <video autoplay="autoplay" loop src="../../assets/bg-header.mp4"></video>
+  <video autoplay loop src="../../assets/bg-header.mp4"></video>
 </div>
 
 <!--DECLARACIONES DE LAS VENTANAS MODAL-->
